# equinor-trading-plotly-dash-template

./: .gitignore  Dockerfile  README.md  app.py  config.py  debug.py  pyproject.toml  run_dev.bat  run_dev.sh  setup.cfg  startup.sh
.github/workflows/: deploy-site.yml  main_webappb904df74.yml
assets/: style.css
deploy/: DeployConfig.py  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  ad_create.py  config.py  config_templates.py  deploy_config.json  pyproject.toml  utils.py
html_templates/: access_denied.html  auth_error.html  base.html  index.html  login.html  menu.html  not_signed_in.html
scripts/: run_dev.bat  run_dev.sh  startup.sh
src/models/: AppSettings.py
src/utils/: DataLoader.py  auth.py  environment.py
views/: DashApp.py  IrisExample.py
