[tool.poetry]
name = "equinor-trading-repo-template"
version = "0.1.0"
description = "Standard template containing the essentials for a new repo"
authors = ["Equinor"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.21.4"
pandas = "^1.3.4"
plotly = "^5.4.0"
Flask = "^2.0.2"
msal = "^1.16.0"
Bootstrap-Flask = "^1.8.0"
dash-bootstrap-components = "^1.0.1"
Flask-Login = "^0.5.0"
azure-identity = "^1.7.1"
azure-keyvault-secrets = "^4.3.0"
Flask-Session = "^0.4.0"
azure-storage-blob = "^12.9.0"
pyarrow = "^6.0.1"
nbformat = "^5.1.3"
opencensus-ext-azure = "^1.1.0"
azure-core = "^1.21.0"
scikit-learn = "^1.0.1"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"
flake8 = "^4.0.1"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
types-requests = "^2.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
